--- a/intRo4 subset.Rmd
+++ b/intRo4 subset.Rmd
@@ -1,34 +1,42 @@
 ---
 title: "4: Subsetting data"
-subtitle: "Introduction to R"
+subtitle: "Introduction to R for health data"
 author: Andrea Mazzella [(GitHub)](https://github.com/andreamazzella)
 ---
 
--------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 # What you will learn
 
-* Data subsets with `dplyr`
- - Filtering rows
- - Selecting columns
- 
-* Conditions in R
- 
-* Pipes
- - `|>`
- - `%>%`
+-   Data subsets with `dplyr`
+    -   Filtering rows
+    -   Selecting columns
+-   Conditions
+-   Pipes
+    -   `|>`
+    -   `%>%`
+    -   `%$%`
 
--------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
+# Recap from topic 3
+
+Use the `ToothGrowth` dataset to calculate summary statistics on tooth length (minimum, mean, maximum) according to whether the guinea pig received supplementation with orange juice or vitamin C.
 
 ```{r}
-# Load packages
+
+```
+
+------------------------------------------------------------------------
+
+Load packages
+
+```{r}
 library(dplyr)
 library(ggplot2)
 ```
 
-
--------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 # Data subsets with `dplyr`
 
@@ -36,14 +44,15 @@ library(ggplot2)
 
 In this topic, we'll focus on two main tasks for which this package is helpful: reducing rows (`filter()`) and reducing columns (`select()`). We'll use the dataset `msleep` containing information on sleep of 83 mammal species.
 
+```{r}
+msleep
+```
 
 ## Filter rows
 
 Sometimes you don't need to use all the observations (rows) in your dataset, but only a group of those: for example, you might want to plot sleep duration only among herbivores.
 
-The function `filter()` lets you do just that: it filters your dataset according to a condition.
-Its first argument is the dataset name, just like function `ggplot()`.
-Its second argument is a condition.
+The function `filter()` lets you do just that: it filters your dataset according to a condition. Its first argument is the dataset name, just like function `ggplot()`. Its second argument is a condition.
 
 ```{r}
 # Only keep herbivores
@@ -54,73 +63,88 @@ filter(msleep, vore == "herbi")
 Note that now there are only 32 rows (down from 83) because all non-herbivores were excluded.
 
 This is a temporary change. `msleep` stayed the same:
+
 ```{r}
 msleep
 ```
 
 If you want to keep a copy of a filtered dataset, you need to assign it a name.
+
 ```{r}
 msleep_herbi <- filter(msleep, vore == "herbi")
 ```
 
+*Exercise 1.*
+
+Use `filter()` to identify which animals sleeps on average 4 hours per night.
+
+```{r}
+
+```
 
 You can use filtered data in a plot: you simply replace the dataset name with the new filtered dataset as the first `ggplot()` argument.
 
 ```{r}
 # Plotting all mammals
 ggplot(msleep,
-       aes(sleep_rem, awake, colour = vore)) + geom_point()
+       aes(sleep_rem, awake, colour = vore)) +
+  geom_point()
 
 # Plotting only herbivores
 ggplot(filter(msleep, vore == "herbi"),
-       aes(sleep_rem, awake, colour = vore)) + geom_point() +
+       aes(sleep_rem, awake, colour = vore)) +
+  geom_point() +
   # The line below will make the two graphs more comparable
   scale_colour_manual(values = "#7CAE00") + coord_cartesian(xlim = c(0, 6.5), ylim = c(4, 22)) 
 ```
 
 Common conditions in R:
-`x == y` (NB: *two* equal signs) - can be used for numbers or text.
-`x != z`: different than - can be used for numbers or text.
-`x > z`, `<`, `>=`, `<=` like in maths.
-`is.na(x)` - is this a missing value?
-`!is.na(x)` - is this a non-missing value?
-`x %in% c(3, 7)` - is this value present in this list?
+
+-   `x == y` (NB: *two* equal signs) - can be used for numbers or text.
+-   `x != z`: different than - can be used for numbers or text.
+-   `x > z`, `<`, `>=`, `<=` like in maths.
+-   `is.na(x)` - is this a missing value?
+-   `!is.na(x)` - is this a non-missing value?
+-   `x %in% c(3, 7)` - is this value present in this list?
 
 For example, we can use `!is.na()` to only keep observation with non-missing sleep cycle data:
+
 ```{r}
 filter(msleep, !is.na(sleep_cycle))
 ```
 
-
 You can also filter on more than one condition; for example, you might want to only filter herbivores that sleep more than 15 hours a day.
+
 ```{r}
 filter(msleep, vore == "herbi" & sleep_total > 15)
 ```
 
 Linking two conditions:
-`&`: and. The overall condition will be TRUE only if both conditions are TRUE.
-`|`: or. The overall condition will be TRUE if either condition is TRUE.
 
-*Exercise*
+-   `&`: and. The overall condition will be TRUE only if both conditions are TRUE.
+-   `|`: or. The overall condition will be TRUE if either condition is TRUE.
+
+*Exercise 2.*
+
 Filter domesticated mammals that weight more than 50 kg. Which are they?
 
-```{r filter}
-filter(msleep, conservation == "domesticated" & bodywt > 50)
+```{r}
+
 ```
 
-*Exercise*
+*Exercise 3.*
+
 Make a bar chart of diet type, but only for mammals whose brain weighs less than 50 grams.
 
 ```{r}
-ggplot(filter(msleep, brainwt < 50/1000), aes(vore)) + geom_bar()
+
 ```
 
-
--------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## Select columns
 
-Function `select()` keeps only certain variables (columns), and removes the rest. The first argument is (again) the dataset name. All the other arguments are the names of the variables we want to keep.
+Function `select()` keeps only certain variables (columns), and removes the rest. The first argument is (again) the dataset name. All the other arguments are the names of the variables we want to keep. (We briefly used this in topic 3 to choose variables to add to a table 1).
 
 Imagine we wanted a dataset containing only information about mammal `name` and `order`:
 
@@ -130,30 +154,30 @@ select(msleep, name, order)
 
 We can add as many variables as we need.
 
-*Exercise*
-Select only variables with brain and body weight, as well as mammal name.
-```{r select}
-select(msleep, name, brainwt, bodywt)
+*Exercise 4*
+
+Show a dataset containing names, brain weights and body weights for all mammals.
+
+```{r}
+
 ```
 
-
-
 There are a number of functions to help us select more efficiently; for example, `starts_with()`:
+
 ```{r}
 msleep |> select(name, starts_with("sleep"))
 ```
 
-
--------------------------------------------------------------------------------
-
+------------------------------------------------------------------------
 
 # Pipes
 
 Let's go back to the pipe, `|>`, that we first saw in the previous topic.
 
 Remember that `|>` does this:
-1. It takes what's on its left hand-side
-2. It makes it the first argument of the next function.
+
+1.  It takes what's on its left hand-side
+2.  It makes it the first argument of the next function.
 
 Examples:
 
@@ -165,8 +189,7 @@ msleep |> filter(order == "Primates")
 filter(msleep, order == "Primates")
 ```
 
-In the chunk above, the `|>` pipe takes `msleep` and shifts it inside `filter()`, in first position, and then adds a comma.
-It effectively makes `msleep` the first argument of `filter()`.
+In the chunk above, the `|>` pipe takes `msleep` and shifts it inside `filter()`, in first position, and then adds a comma. It effectively makes `msleep` the first argument of `filter()`.
 
 You might think that it's not particularly helpful in this case. However, it can simplify more complex code - for example, think about doing plots with an intermediate subsetting step. You have three options which produce the same result.
 
@@ -189,14 +212,16 @@ msleep |>
 
 An explanation of the code above.
 
-1. Make a plot of a filtered version of `msleep`. This makes code more difficult to read - you don't immediately understand which dataset is being plotted.
-2. Create a new object called `msleep_herbi` and make it a filtered version of `msleep`. Then make a plot of `msleep_herbi`. This is clearer, but you risk ending up with a very busy Environment if you create a lot of new objects.
-3. You take `msleep` *and then* you `filter()` it, *and then* you use that in a `ggplot()`.
+1.  Make a plot of a filtered version of `msleep`. This makes code more difficult to read - you don't immediately understand which dataset is being plotted.
+2.  Create a new object called `msleep_herbi` and make it a filtered version of `msleep`. Then make a plot of `msleep_herbi`. This is clearer, but you risk ending up with a very busy Environment if you create a lot of new objects.
+3.  You take `msleep` *and then* you `filter()` it, *and then* you use that in a `ggplot()`.
 
-You can set a keyboard shortcut for the pipe. Go to Tools -> Global options -> Code -> tick "Use native pipe operator, |>". After this, pressing *Ctrl + Shift + M* (on Windows) will insert a pipe.
+*Exercise 5.*
 
-*Exercise*
 Rewrite this command using a pipe.
+
+NB - You can set a keyboard shortcut for the `|>` pipe. Go to Tools -\> Global options -\> Code -\> tick "Use native pipe operator, \|\>". After this, pressing *Ctrl + Shift + M* (on Windows) will insert a `|>` pipe.
+
 ```{r}
 # Code without a pipe
 select(msleep, name)
@@ -205,41 +230,43 @@ select(msleep, name)
 
 ```
 
-*Exercise*
+*Exercise 6.*
+
 Rewrite this command without the pipe.
+
 ```{r}
+# With a pipe
 msleep |> filter(awake > 21)
+
+# Without a pipe
+
 ```
 
+You can combine `select()` and `filter()` by piping. For example, you might want to only focus on weight information for animals with missing `conservation` data.
 
-You can combine `select()` and `filter()` by piping. For example, you might want to only focus on weight information for animals with missing `conservation` data. 
 ```{r}
 msleep |>
   filter(is.na(conservation)) |> 
   select(name, ends_with("wt"))
 ```
 
--------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
-*Recap exercise*
-1. Create a new dataset called `sleepy` containing only data on genus and order - just for insectivores who sleep at least 9 hours per day.
-2. How many mammals satisfy these filters?
-3. Which animal orders do they belong to?
-```{r recap}
-msleep |>
-  filter(vore == "insecti" & sleep_total >= 13) |>
-  select(name, genus, order)
+*Exercise 7.*
+
+1.  Create a new dataset called `sleepy` containing only data on name, genus and order - just for insectivores who sleep at least 9 hours per day.
+2.  How many mammals satisfy these filters?
+3.  Which animal orders do they belong to?
+
+```{r}
+
 ```
 
-
--------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 ## Other pipes
 
-
-You will sometimes see other pipes. The two more common ones are:
-- `%>%` - in most circumstances it works the same as `|>`. It's very popular because it was created before `|>`.
-- `%$%` - this is the equivalent of `|>` for functions that require columns to be identified with `$`.
+You will sometimes see other pipes. The two more common ones are: - `%>%` - in most circumstances it works the same as `|>`. It's very popular because it was created before `|>`. - `%$%` - this is the equivalent of `|>` for functions that require columns to be identified with `$`.
 
 I don't think it's important to know more about these pipes at this stage.
 
@@ -260,11 +287,13 @@ By default, in RStudio you can insert this pipe by typing *Ctrl + Shift + M* (on
 ### `%$%` pipe
 
 You might remember the `$` operator, which extracts a variable from a dataset: `data$variable1` subsets the variable called `variable1` from the dataset `data`.
+
 ```{r}
 msleep$vore
 ```
 
 We use this syntax when a function requires a variable (and not the whole dataset); for example, if we want to get the frequencies of a categorical variable with `table()`, we must use the syntax below.
+
 ```{r}
 table(msleep$vore)
 ```
@@ -273,9 +302,10 @@ This means that you can't use the native pipe: `msleep |> table(conservation, vo
 
 The `%$%` pipe, from package `magrittr`, takes what's on its left (usually, the dataset name) and moves it inside the function, before each argument, and adds a `$` in between. It lets you avoid typing the dataset name and `$` twice, and it makes the true arguments of the function stand out.
 
-It's particularly useful when a function uses multiple variables, because otherwise you would need to specify which dataset is each variable from – this would quickly become verbose.
+It's particularly useful when a function uses multiple variables, because otherwise you would need to specify which dataset is each variable from -- this would quickly become verbose.
 
 The two commands below generate the same output.
+
 ```{r}
 # Without a pipe (= base R)
 table(msleep$conservation, msleep$vore)
@@ -285,13 +315,13 @@ library(magrittr)
 msleep %$% table(conservation, vore)
 ```
 
--------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 # Data subsets in base R
 
 You might see code that subsets data without using `dplyr`.
 
-This uses the `[` operator: after writing the dataset name, you follow it with `[]`, containing instructions on how to subset. 
+This uses the `[` operator: after writing the dataset name, you follow it with `[]`, containing instructions on how to subset.
 
 ## Select columns in base R
 
@@ -306,6 +336,7 @@ msleep |> select(name)
 ```
 
 More than one column can be passed with `c()`.
+
 ```{r}
 # Base R
 msleep[c("name", "sleep_total")]
@@ -316,20 +347,56 @@ msleep |> select(name, sleep_total)
 
 ## Filter rows in base R
 
-The variable needs to be identified with the `$` operator, and the condition is followed by a comma.
+Two options:
+
+1.  The variable needs to be identified with the `$` operator, and the condition is followed by a comma.
+2.  `subset()` function - very similar to `dplyr::filter()`.
+
 ```{r}
 # Base R
 msleep[msleep$bodywt > 50, ]
+msleep |> subset(bodywt > 50)
 
 # dplyr
 msleep |> filter(bodywt > 50)
 ```
 
-
--------------------------------------------------------------------------------
+------------------------------------------------------------------------
 
 # Solutions
 
+```{r}
+# Recap
+ToothGrowth |>
+  group_by(supp) |>
+  summarise(min(len),
+            mean(len),
+            max(len))
 
+# Exercise 1
+filter(msleep, sleep_total == 4)
 
--------------------------------------------------------------------------------
+# Exercise 2
+filter(msleep, conservation == "domesticated" & bodywt > 50)
+
+# Exercise 3
+ggplot(filter(msleep, brainwt < 50/1000), aes(vore)) + geom_bar()
+
+# Exercise 4
+select(msleep, name, brainwt, bodywt)
+
+# Exercise 5
+msleep |> select(name)
+
+# Exercise 6
+filter(msleep, awake > 21)
+
+# Exercise 7
+sleepy <- msleep |>
+  filter(vore == "insecti" & sleep_total >= 13) |>
+  select(name, genus, order)
+
+sleepy
+```
+
+------------------------------------------------------------------------
