--- a/intRo8 continuous.Rmd
+++ b/intRo8 continuous.Rmd
@@ -1,8 +1,10 @@
 ---
 title: "6: Analysing continuous outcomes"
-subtitle: "Introduction to R"
+subtitle: "Introduction to R for health data"
 author: Andrea Mazzella [(GitHub)](https://github.com/andreamazzella)
 ---
+
+NB: work in progress
 
 -------------------------------------------------------------------------------
 
