--- a/intRo9 categorical.Rmd
+++ b/intRo9 categorical.Rmd
@@ -1,9 +1,10 @@
 ---
 title: "7: Analysing categorical outcomes"
-subtitle: "Introduction to R"
+subtitle: "Introduction to R for health data"
 author: Andrea Mazzella [(GitHub)](https://github.com/andreamazzella)
-output: html_notebook
 ---
+
+NB: work in progress
 
 ------------------------------------------------------------------------
 
