--- a/intRo1 basics.Rmd
+++ b/intRo1 basics.Rmd
@@ -14,6 +14,7 @@ author: Andrea Mazzella [(GitHub)](https://github.com/andreamazzella)
 -   Assignment
 -   Functions
 -   Datasets
+-   Vectors
 
 ------------------------------------------------------------------------
 
